# ekai-AIXcelerator

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  docker-compose.yml  ecosystem.config.js  ekaiX_Extended_Product_PRD_v2.md  ekaiX_Technical_PRD.md  ekaiX_Technical_PRD_v3.md  manifest.yml  package-lock.json  setup_script.sql
ai-service/: config.py  main.py  pyproject.toml  requirements.txt
ai-service/.benchmarks/: README.md  gold_cases_300.jsonl  gold_predictions_300.json  latest_report.json  sample_cases.jsonl  sample_predictions.json
ai-service/agents/: __init__.py  discovery.py  explorer.py  generation.py  orchestrator.py  prompts.py  publishing.py  requirements.py  validation.py
ai-service/backends/: __init__.py  composite.py  filesystem_backend.py  neo4j_backend.py  state_backend.py  store_backend.py
ai-service/models/: __init__.py  schemas.py
ai-service/routers/: __init__.py  agent.py  config.py  documents.py  health.py
ai-service/scripts/: run_hybrid_benchmark.py
ai-service/services/: __init__.py  discovery_pipeline.py  hybrid_eval.py  langfuse_scoring.py  litellm_router.py  litellm_wrapper.py  llm.py  minio.py  model_names.py  neo4j.py  postgres.py  redis.py  snowflake.py  supervisor_guardrails.py
ai-service/tests/: __init__.py  test_hybrid_eval.py  test_neo4j_document_tools.py  test_postgres_document_tools.py  test_router_history_contracts.py  test_router_tool_payloads.py  test_snowflake_tools_publish.py  test_supervisor_guardrails.py
ai-service/tools/: __init__.py  ddl.py  discovery_tools.py  minio_tools.py  modeling_tools.py  naming.py  (+6 more)
(+164 files in other folders)
